Tue May 22 13:55:26 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: sorted Belkin models by model name.

Tue May 22 12:23:28 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - data/driver.list: added all UPSes that are reported supported to the list.

Tue May 22 11:04:36 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.c:
   - Don't check for sockettype and protocol (shouldn't be necessary, since
     getaddrinfo() will return only combinations that match what we asked for)
     Apparently, some Solaris systems will return IPPROTO_IP when we ask for
     IPPROTO_TCP, which seems to be fine.
   - Additional error reporting for getaddrinfo()
   - Minor changes (coding style)
 * server/upsd.c:
   - Remove redundant check after getaddrinfo() call (which is guaranteed to
     have at least one addrinfo element if successful)

Mon May 21 18:42:07 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: don't check for sockettype and protocol (shouldn't be
   necessary, since getaddrinfo() will return only combinations that match
   what we asked for)
   Apparently, some Solaris systems will return IPPROTO_IP when we ask for
   IPPROTO_TCP, which seems to be fine.

Sun May 20 08:22:20 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Changed 'unsigned int' to 'int' in alarm struct bcmxcp.h. And also the alarm
   counter in bcmxcp.c even if usigned int to int works. Fix bug for missing
   alarms.

Fri May 18 19:28:24 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - updated documentation to reflect the automatic installation of
   udev/hotplug scripts.

Thu May 17 23:36:38 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: added Belkin F6C1200-UNV to the list of known
   devices.

Thu May 17 09:44:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * server/upsd.c:
   - provide additional debug information for setuptcp() if IPv6 is used